# elfo

./: .gitignore  COPYING  ChangeLog  Doxyfile  Makefile.am  README  configure  configure.ac
src/: Makefile.am  elfo.c  elfo.h
